Partial updates of homepage content and images

--- a/index.html
+++ b/index.html
@@ -362,24 +362,24 @@
 	
 
 	<tr class="about-row">
-		<td class="col-1">Topic:</td><td class="col-2">Climate and Extreme Events</td>
+		<td class="col-1">Topic:</td><td class="col-2">Earth System Predictability across Scales</td>
 	</tr>
 
 	<tr class="about-row">
-		<td class="col-1">Date:</td><td class="col-2">July 22nd - Aug 2nd, 2024</td>
+		<td class="col-1">Date:</td><td class="col-2">July 20th - 31st, 2026</td>
 	</tr>
 
 	<tr class="about-row">
-		<td class="col-1">Application timeline:</td><td class="col-2">Application opens on Mar 4th, 2024</td>
+		<td class="col-1">Application timeline:</td><td class="col-2"> To be announced</td>
 	</tr>
 
-	<tr class="about-row">
+	<!-- <tr class="about-row">
 		<td class="col-10"> </td><td class="col-2">Application closes on Apr 28th, 2024</td>
 	</tr>
 
 	<tr class="about-row">
 		<td class="col-10"> </td><td class="col-2">Results will be announced in May, 2024</td>
-	</tr>
+	</tr> -->
 
 
 	<tr class="about-row">
@@ -387,10 +387,11 @@
 	</tr>
 
 	<tr class="about-row">
+		<!-- <td class="col-1">Description:</td><td class="col-2">Rossbypalooza is a two-week long project-oriented summer school for people from a broad field of atmospheric, oceanic and planetary sciences. The goal is to provide a platform for interactions among students and faculty to understand climate extremes, their impacts, and their connection to climate change from various perspectives including small-to-large-scale dynamics and data-driven methodologies. The school will consist of lectures and projects where participants will work in groups to address a question of their choice, mentored by one of the faculty members.</td> -->
 		<td class="col-1">Description:</td><td class="col-2">Rossbypalooza is a two-week long project-oriented summer school for people from a broad field of atmospheric, oceanic and planetary sciences. The goal is to provide a platform for interactions among students and faculty to understand climate extremes, their impacts, and their connection to climate change from various perspectives including small-to-large-scale dynamics and data-driven methodologies. The school will consist of lectures and projects where participants will work in groups to address a question of their choice, mentored by one of the faculty members.</td>
 	</tr>
 	<tr class="about-row">
-		<td class="col-1">Acknowledgement:</td><td class="col-2">Rossbypalooza is funded by National Science Fundation (NSF) and Department of the Geophysical Sciences. The computational resources are provided by the Research Computing Center (RCC) at UChicago. The organizers want to thank their generous support for making the event possible.</td>
+		<td class="col-1">Acknowledgement:</td><td class="col-2">Rossbypalooza is funded by National Science Fundation (NSF), Data Science Institute, and Department of the Geophysical Sciences. The computational resources are provided by the Research Computing Center (RCC) at UChicago. The organizers want to thank their generous support for making the event possible.</td>
 	</tr>
 
 </table>
@@ -413,10 +414,10 @@
 			<!-- ABOUT -->
 			<section id="content2" class="tab-content">
 				<h3>Background</h3>
-		      	<p>Rossbypalooza is a student-led summer school at the University of Chicago. It is named after the Swedish meteorologist <a href="https://en.wikipedia.org/wiki/Carl-Gustaf_Rossby" target="new">Carl Gustav Rossby</a> and <a href="https://www.lollapalooza.com/" target="new">Lollapalooza</a>, the annual music festival of Chicago. Carl Gustav Rossby was the head of the department of meteorology in the University of Chicago when he did his pioneering work on the Rossby waves of Earth’s atmosphere. In the spirit of celebrating climate science with fun, Rossbypalooza brings together people from different fields to understand the climate of Earth and other planets. Check out the past Rossbypalooza held in <a href="http://rossbypalooza.org/rossby2016" target="new">2016</a>, <a href="http://rossbypalooza.org/rossby2018" target="new">2018</a>, and <a href="http://rossbypalooza.org/rossby2022" target="new">2022</a>!</p>
+		      	<p>Rossbypalooza is a student-led summer school at the University of Chicago. It is named after the Swedish meteorologist <a href="https://en.wikipedia.org/wiki/Carl-Gustaf_Rossby" target="new">Carl Gustav Rossby</a> and <a href="https://www.lollapalooza.com/" target="new">Lollapalooza</a>, the annual music festival of Chicago. Carl Gustav Rossby was the head of the department of meteorology in the University of Chicago when he did his pioneering work on the Rossby waves of Earth’s atmosphere. In the spirit of celebrating climate science with fun, Rossbypalooza brings together people from different fields to understand the climate of Earth and other planets. Check out the past Rossbypalooza held in <a href="http://rossbypalooza.org/rossby2016" target="new">2016</a>, <a href="http://rossbypalooza.org/rossby2018" target="new">2018</a>, <a href="http://rossbypalooza.org/rossby2022" target="new">2022</a>, and <a href="http://rossbypalooza.org/rossby2024" target="new">2024</a>!</p>
 
-				<h3>Rossbypalooza 2024 Focus</h3>
-				<p> This year’s topic is “<b>Climate and Extreme events</b>”. Extreme events pose significant concerns for both climate and social impacts, particularly as they become more frequent and intense under climate change. However, confidence in understanding the trend of extreme events varies due to limitations in observational data and deficiencies in climate models. To address these challenges, we will develop theoretical frameworks, utilize tools such as climate models and machine learning to gain insights, and conduct risk assessments aimed at mitigating the impacts of extreme events in a changing climate.</p>
+				<h3>Rossbypalooza 2026 Focus</h3>
+				<p> This year’s topic is “<b>Earth System Predictability across Scales</b>”. Extreme events pose significant concerns for both climate and social impacts, particularly as they become more frequent and intense under climate change. However, confidence in understanding the trend of extreme events varies due to limitations in observational data and deficiencies in climate models. To address these challenges, we will develop theoretical frameworks, utilize tools such as climate models and machine learning to gain insights, and conduct risk assessments aimed at mitigating the impacts of extreme events in a changing climate.</p>
 
 				<h3>Program Structure</h3>
 				<p>The summer school will consist of lecture series by faculty in the first week, introducing their experience of tackling problems related to extreme events. However, the focus of the program is a hackathon, where participants will work in groups throughout the two weeks to solve problems in consultation with the faculty members. At the end of program, participants will present their results and get feedbacks from the faculty.</p>
@@ -424,8 +425,8 @@
 				<p>This school is open to graduate students and postdocs working in atmospheric, oceanic, sea ice, glacier, and (exo)planetary sciences. Last time, we accepted 27 external students in total. People interested in climate research with applied math or physics background are also encouraged to apply. Please contact us at rossbypalooza@gmail.com for further details.</p>
 
 
-                                <h3>Rossbypalooza 2024 Organization Group</h3>
-				<p> <td class="web"><a href="https://geosci.uchicago.edu/people/siming-liu" target="new">Siming Liu</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/yaoxuan-zeng/" target="new">Yaoxuan Zeng</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/xuan-ji/" target="new">Xuan Ji</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/joonsuk-kang/" target="new">Joonsuk Kang</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/carly-kleinstern/" target="new">Carly KleinStern</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/giorgio-sarro/" target="new">Giorgio Sarro</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/lin-yao/" target="new">Lin Yao</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/nuanliang-zhu/" target="new">Nuanliang Zhu</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/noboru-nakamura/" target="new">Noboru Nakamura</a></td>, and <td class="web"><a href="https://geosci.uchicago.edu/people/tiffany-shaw/" target="new">Tiffany Shaw</a></td>. </p>
+                                <h3>Rossbypalooza 2026 Organization Group</h3>
+				<p> <td class="web"><a href="https://geosci.uchicago.edu/people/jiacheng-ye/" target="new">Jiachegn Ye</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/hsing-hung-chou/" target="new">Hsing-Hung Chou</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/yaoxuan-zeng/" target="new">Yaoxuan Zeng</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/katherine-rucker/" target="new">Katharine Rucker</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/jiawen-tang/" target="new">Jiawen Tang</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/lichuan-xu/" target="new">Lichuan Xu</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/noboru-nakamura/" target="new">Noboru Nakamura</a></td>, <td class="web"><a href="https://geosci.uchicago.edu/people/tiffany-shaw/" target="new">Tiffany Shaw</a></td>, and <td class="web"><a href="https://geosci.uchicago.edu/people/pedram-hassanzadeh/" target="new">Pedram Hassanzadeh</a></td>. </p>
 
 			</section>
 
@@ -437,7 +438,7 @@
 <p>Click on a faculty member to see their research interests and Rossbypalooza contributions!</p>
 <div class="ftab">
 
-<!-- PAUL O'GORMAN -->
+<!-- KERRY EMANUEL -->
 <button class="ftablinks" onclick="openCity(event, 'paul')">
 	  <table class="tf">
 	  	<tr>
@@ -445,7 +446,7 @@
 	  			<img src="img_faculty/Paul.jpg">
 	  		</td>
 	  		<td class="col_2">
-				<h4>Paul O'Gorman</h4>
+				<h4>Kerry Emanuel</h4>
 				<h5>Keynote Speaker</h5>
 				<p>Massachusetts Institute of Technology</p>
 	  		</td>
@@ -468,7 +469,7 @@
           </table>
 </button><br>
 
-<!-- WILLIAM BOOS -->
+<!-- X San Liang -->
 <button class="ftablinks" onclick="openCity(event, 'william')">
           <table class="tf">
                 <tr>
@@ -476,8 +477,8 @@
                                 <img src="img_faculty/William.jpg">
                         </td>
                         <td class="col_2">
-                                <h4>William Boos</h4>
-                                <p>University of California, Berkeley</p>
+                                <h4>X. San Liang</h4>
+                                <p>Fudan University</p>
                         </td>
                 </tr>
           </table>
@@ -561,37 +562,6 @@
         </table>
 </button><br>
 
-<!-- ADAM SOBEL -->
-<button class="ftablinks" onclick="openCity(event, 'adam')">
-          <table class="tf">
-                <tr>
-                        <td class="col_1">
-                                <img src="img_faculty/Adam.jpg">
-                        </td>
-                        <td class="col_2">
-                                <h4>Adam Sobel</h4>
-                                <p>Columbia University</p>
-                        </td>
-                </tr>
-          </table>
-</button><br>
-
-
-<!-- Jonathan Weare -->
-<button class="ftablinks" onclick="openCity(event, 'jonathan')">
-          <table class="tf">
-                <tr>
-                        <td class="col_1">
-                                <img src="img_faculty/Jonathan.png">
-                        </td>
-                        <td class="col_2">
-                                <h4>Jonathan Weare</h4>
-                                <p>New York University</p>
-                        </td>
-                </tr>
-          </table>
-</button><br>
-
 <!-- DA YANG -->
 <button class="ftablinks" onclick="openCity(event, 'da')">
           <table class="tf">
@@ -607,21 +577,6 @@
           </table>
 </button><br>
 
-
-<!-- MINGYI WANG -->
-<button class="ftablinks" onclick="openCity(event, 'mingyi')">
-	  <table class="tf">
-	  	<tr>
-	  		<td class="col_1">
-	  			<img src="img_faculty/Mingyi.jpeg">
-	  		</td>
-	  		<td class="col_2">
-				<h4>Mingyi Wang</h4>
-				<p>University of Chicago</p>
-	  		</td>
-	  	</tr>
-	  </table>
-</button><br>
 
 
 </div>
@@ -992,9 +947,9 @@ function openCity(evt, cityName) {
 			<section id="content4" class="tab-content">
 				<!-- <h3>Headline 4</h3> -->
 				<h3>Timeline</h3>
-				<p>Application opens on Mar 4th, 2024</p>
-				<p>Application closes on Apr 28th, 2024</p>
-				<p>Results will be announced in May, 2024</p>
+				<p>Application opens on TBD</p>
+				<p>Application closes on TBD</p>
+				<p>Results will be announced in May, 2026</p>
 				
 
 				<h3>Requirements</h3>
