"Updates with warning message at the top."

--- a/index.html
+++ b/index.html
@@ -255,7 +255,10 @@
 
 	<!-- <div id="slideContainer">
 			</div> -->
-
+<div style="background:#b30000; color:white; padding:12px; text-align:center;">
+			⚠️ This website currently displays information from the 2024 summer school.
+			Details for 2026 are under preparation and will be announced here.
+</div>
 
 <div id="iconz">
 	<img src=img_site/symbol.png>
