Partial updates on the faculty links.

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 <div class="ftab">
 
 <!-- KERRY EMANUEL -->
-<button class="ftablinks" onclick="openCity(event, 'paul')">
+<button class="ftablinks" onclick="openCity(event, 'kerry')">
 	  <table class="tf">
 	  	<tr>
 	  		<td class="col_1">
@@ -473,7 +473,7 @@
 </button><br>
 
 <!-- X San Liang -->
-<button class="ftablinks" onclick="openCity(event, 'william')">
+<button class="ftablinks" onclick="openCity(event, 'xsan')">
           <table class="tf">
                 <tr>
                         <td class="col_1">
@@ -790,35 +790,7 @@
 </div>
 
 
-
-
-<div id="william" class="ftabcontent">
-
-<table>
-<tr>
-<td>
-          <img src="img_faculty/William.jpg">
-
-          <table class = "web">
-          <tr>
-          <td><h2>William Boos</h2></td><td class="web">(<a href="https://eps.berkeley.edu/people/william-boos" target="new">Website</a>)</td>
-      </tr>
-          </table>
-
-          <h3>University of California, Berkeley</h3>
-
-          <h4>Faculty and project mentor</h4>
-
-	  <p>William Boos’ research focuses on large-scale climate dynamics— understanding how atmospheric circulations, ocean interactions, radiative transfer, and land surface processes control regional and global climate. Some of his research centers on monsoons, which are continental-scale atmospheric circulations that deliver water to billions of people in Asia, Africa, the Americas, and northern Australia; monsoon winds also constitute a major component of Earth’s global atmospheric circulation. He also studies extreme weather and climate phenomena, seeking to understand how fluid dynamics and thermodynamics govern the behavior of atmospheric vortices, heat waves, and intense precipitation. He pays particular attention to the phase changes of water in Earth’s atmosphere, as the interaction of precipitating clouds with planetary-scale flow is one of the central unresolved problems of planetary science. His work broadly aims to combine theory, observational analyses, and numerical models to discover the fundamental mechanisms governing atmospheric and climate phenomena.</p>
-
-</td>
-</tr>
-</table>
-
-</div>
-
-
-<div id="paul" class="ftabcontent">
+<div id="kerry" class="ftabcontent">
 
 <table>
 <tr>
@@ -827,7 +799,7 @@
 
           <table class = "web">
           <tr>
-          <td><h2>Paul O'Gorman</h2></td><td class="web">(<a href="https://pog.mit.edu" target="new">Website</a>)</td>
+          <td><h2>Kerry Emanuel</h2></td><td class="web">(<a href="https://emanuel.mit.edu/" target="new">Website</a>)</td>
       </tr>
           </table>
 
@@ -835,7 +807,7 @@
 
           <h4>Keynote speaker and project mentor</h4>
 
-	  <p>Professor O'Gorman's research is motivated by the need to understand how the hydrological cycle and atmospheric circulations respond to climate change. Particular areas of interest include the extratropical storm tracks, moist convection, and extreme precipitation. In addition to developing theory and analyzing simulations and observations, his research group is working to improve climate models through machine learning, with a focus on the representation of precipitation statistics.</p>
+	  <p>More information will be announced.</p>
 
 </td>
 </tr>
@@ -844,7 +816,7 @@
 </div>
 
 
-<div id="jonathan" class="ftabcontent">
+<div id="xsan" class="ftabcontent">
 
 <table>
 <tr>
@@ -853,15 +825,15 @@
 
           <table class = "web">
           <tr>
-          <td><h2>Jonathan Weare</h2></td><td class="web">(<a href="https://cims.nyu.edu/~weare/" target="new">Website</a>)</td>
+          <td><h2>X. San Liang</h2></td><td class="web">(<a href="" target="new">Website</a>)</td>
       </tr>
           </table>
 
-          <h3>New York University</h3>
+          <h3>Fudan University</h3>
 
           <h4>Faculty and project mentor</h4>
 
-	  <p>My group and I develop, formally analyze, and apply new theoretical and computational tools to address modern grand challenges in fundamental science. These include methods to study important dynamical phenomena that would otherwise require experimental observation or model simulation on prohibitively long time scales (for example, to study extreme weather and climate events or chemical reactions), accurate reduced complexity models and simulation tools for multiscale physical processes (for example, to describe the behavior of microscopic models at macroscopic length scales), techniques for learning hidden signals and model parameters from data (for example, to identify exoplanet parameters), and new techniques for solving enormous problems in linear algebra (for example, to characterize the fundamental properties of molecules).</p>
+	  <p>More information will be announced.</p>
 
 </td>
 </tr>
